better location read, request gps if off

--- a/BioadresarAndroid/res/xml/preferences.xml
+++ b/BioadresarAndroid/res/xml/preferences.xml
@@ -30,4 +30,8 @@
         android:summary="@string/defaultLocationSummary"
         android:title="@string/defaultLocationLabel" />
 
+    <CheckBoxPreference
+        android:key="requireGps"
+        android:title="@string/requireGps" />
+
 </PreferenceScreen>
