--- a/BioadresarAndroid/res/layout/detail_view.xml
+++ b/BioadresarAndroid/res/layout/detail_view.xml
@@ -14,7 +14,7 @@
     GNU General Public License for more details.
 
     You should have received a copy of the GNU General Public License
-    along with BioAdresar.  If not, see <http://www.gnu.org/licenses/>.
+    along with BioAdresar.  If not, see <http://www.gnu.org/licenses/>.
 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/detailView"
@@ -39,26 +39,26 @@
 
                 <TextView
                     android:id="@+id/farmName"
-                    android:layout_width="wrap_content"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_weight="0.8"
                     android:gravity="left"
                     android:text="Farm name"
                     android:textAppearance="?android:attr/textAppearanceLarge" />
 
                 <ImageView
                     android:id="@+id/mapIcon"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:layout_weight="1"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_weight="0.1"
                     android:gravity="right"
                     android:src="@android:drawable/ic_menu_mapmode" />
 
                 <ImageView
                     android:id="@+id/bookmarkIcon"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:layout_weight="1"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_weight="0.1"
                     android:gravity="right"
                     android:src="@android:drawable/btn_star_big_off" />
             </LinearLayout>
