--- a/BioadresarAndroid/res/layout/list_item_layout.xml
+++ b/BioadresarAndroid/res/layout/list_item_layout.xml
@@ -24,7 +24,7 @@
 
     <LinearLayout
         android:id="@+id/toDetailArea"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0.7"
         android:gravity="left"
@@ -32,7 +32,7 @@
 
         <TextView
             android:id="@+id/farmName"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="Large Text"
             android:textAppearance="?android:attr/textAppearanceMedium" />
@@ -49,7 +49,7 @@
 
     <LinearLayout
         android:id="@+id/toMapArea"
-        android:layout_width="100dp"
+        android:layout_width="130dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dip"
         android:layout_weight="0.3"
@@ -58,9 +58,8 @@
 
         <TextView
             android:id="@+id/distance"
-            android:layout_width="80dp"
+            android:layout_width="110dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.25"
             android:gravity="right"
             android:minWidth="80dp"
             android:text="Medium Text"
@@ -71,7 +70,6 @@
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_gravity="right"
-            android:layout_weight="0.05"
             android:minHeight="20dp"
             android:minWidth="20dp"
             android:src="@drawable/marker2" />
