--- a/BioadresarAndroid/res/layout/list_item_layout.xml
+++ b/BioadresarAndroid/res/layout/list_item_layout.xml
@@ -18,61 +18,95 @@
 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:layout_marginBottom="5dip"
-    android:orientation="horizontal" >
+    android:layout_height="70dp"
+    android:layout_margin="0dp"
+    android:orientation="vertical" >
 
     <LinearLayout
-        android:id="@+id/toDetailArea"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.7"
-        android:gravity="left"
-        android:orientation="vertical" >
-
-        <TextView
-            android:id="@+id/farmName"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="Large Text"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:layout_height="fill_parent"
+        android:layout_margin="0dp"
+        android:layout_weight="1" >
 
         <LinearLayout
-            android:id="@+id/productionIcons"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="left"
+            android:id="@+id/toDetailArea"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:layout_weight="1"
-            android:minHeight="20dip"
-            android:orientation="horizontal" />
-    </LinearLayout>
+            android:gravity="left"
+            android:orientation="vertical" >
 
-    <LinearLayout
-        android:id="@+id/toMapArea"
-        android:layout_width="130dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="5dip"
-        android:layout_weight="0.3"
-        android:gravity="right"
-        android:minWidth="100dp" >
+            <TextView
+                android:id="@+id/farmName"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top"
+                android:layout_weight="0"
+                android:text="Large Text"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="@color/White" />
 
-        <TextView
-            android:id="@+id/distance"
-            android:layout_width="110dp"
-            android:layout_height="wrap_content"
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0" >
+
+                <LinearLayout
+                    android:id="@+id/productionIcons"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left"
+                    android:layout_weight="0"
+                    android:minHeight="20dip"
+                    android:orientation="horizontal" >
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="fill_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1" >
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/distance"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:layout_weight="0"
+                    android:gravity="right"
+                    android:minWidth="80dp"
+                    android:text="Medium Text"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:textColor="@color/DimGray" />
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/toMapArea"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
+            android:layout_marginLeft="5dip"
+            android:layout_weight="0"
             android:gravity="right"
-            android:minWidth="80dp"
-            android:text="Medium Text"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
+            android:minWidth="100dp" >
 
-        <ImageView
-            android:id="@+id/imageView1"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_gravity="right"
-            android:minHeight="20dp"
-            android:minWidth="20dp"
-            android:src="@drawable/marker2" />
+            <ImageView
+                android:id="@+id/imageView1"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_gravity="right"
+                android:minHeight="20dp"
+                android:minWidth="20dp"
+                android:src="@drawable/to_map_icon" />
+        </LinearLayout>
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="fill_parent"
+        android:layout_height="5dp"
+        android:layout_weight="1"
+        android:scaleType="fitXY"
+        android:src="@drawable/duha_border_gray" />
 
 </LinearLayout>
