--- a/BioadresarAndroid/res/layout/balloon_layout.xml
+++ b/BioadresarAndroid/res/layout/balloon_layout.xml
@@ -19,22 +19,25 @@
 <!-- mostly copy-paste from Balloons -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/balloon_main_layout"
-    android:layout_width="wrap_content"
+    android:layout_width="250dp"
     android:layout_height="wrap_content"
-    android:background="@drawable/balloon_overlay_bg_selector"
-    android:minWidth="200dip"
+    android:background="@drawable/map_objectname_background"
     android:orientation="horizontal"
-    android:paddingBottom="25dip"
+    android:paddingBottom="0dp"
     android:paddingLeft="10dip"
-    android:paddingRight="0dip"
+    android:paddingRight="50dp"
     android:paddingTop="0dip" >
 
     <LinearLayout
         android:id="@id/balloon_inner_layout"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="6dip"
-        android:layout_weight="1" >
+        android:layout_gravity="center"
+        android:layout_marginBottom="-10dp"
+        android:layout_marginTop="-10dp"
+        android:layout_weight="1"
+        android:paddingBottom="-10dp"
+        android:paddingTop="-10dp" >
 
         <LinearLayout
             android:layout_width="0dp"
@@ -51,7 +54,7 @@
                 android:gravity="center_horizontal"
                 android:text="balloon_item_title"
                 android:textColor="@android:color/primary_text_light"
-                android:textSize="16dip" />
+                android:textSize="16sp" />
 
             <LinearLayout
                 android:id="@+id/balloon_item_icons"
@@ -68,7 +71,8 @@
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:layout_gravity="center_vertical"
-            android:src="@drawable/balloon_disclosure" />
+            android:layout_marginRight="0dp"
+            android:src="@drawable/arrow_right" />
     </LinearLayout>
 
 </LinearLayout>
