--- a/BioadresarAndroid/res/layout/list_item_layout.xml
+++ b/BioadresarAndroid/res/layout/list_item_layout.xml
@@ -18,20 +18,19 @@
 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="70dp"
-    android:layout_margin="0dp"
+    android:layout_height="wrap_content"
     android:orientation="vertical" >
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="wrap_content"
         android:layout_margin="0dp"
         android:layout_weight="1" >
 
         <LinearLayout
             android:id="@+id/toDetailArea"
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="left"
             android:orientation="vertical" >
@@ -41,15 +40,23 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="top"
-                android:layout_weight="0"
+                android:layout_weight="0.1"
                 android:text="Large Text"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textColor="@color/White" />
 
             <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="fill_parent"
+                android:layout_weight="0.1"
+                android:orientation="vertical" >
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="0" >
+                android:layout_gravity="bottom"
+                android:layout_weight="0.1" >
 
                 <LinearLayout
                     android:id="@+id/productionIcons"
@@ -74,7 +81,6 @@
                     android:layout_gravity="right"
                     android:layout_weight="0"
                     android:gravity="right"
-                    android:minWidth="80dp"
                     android:text="Medium Text"
                     android:textAppearance="?android:attr/textAppearanceSmall"
                     android:textColor="@color/DimGray" />
@@ -83,20 +89,17 @@
 
         <LinearLayout
             android:id="@+id/toMapArea"
-            android:layout_width="65dp"
-            android:layout_height="65dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
             android:layout_marginLeft="5dip"
-            android:layout_weight="0"
-            android:gravity="right"
-            android:minWidth="100dp" >
+            android:gravity="right" >
 
             <ImageView
                 android:id="@+id/imageView1"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="right"
-                android:minHeight="20dp"
-                android:minWidth="20dp"
                 android:src="@drawable/to_map_icon" />
         </LinearLayout>
     </LinearLayout>
@@ -104,9 +107,9 @@
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="fill_parent"
-        android:layout_height="5dp"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
         android:scaleType="fitXY"
-        android:src="@drawable/duha_border_gray" />
+        android:src="@drawable/list_spacer" />
 
 </LinearLayout>
