--- a/BioadresarAndroid/res/layout/balloon_layout.xml
+++ b/BioadresarAndroid/res/layout/balloon_layout.xml
@@ -19,13 +19,13 @@
 <!-- mostly copy-paste from Balloons -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/balloon_main_layout"
-    android:layout_width="250dp"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@drawable/map_objectname_background"
     android:orientation="horizontal"
     android:paddingBottom="0dp"
     android:paddingLeft="10dip"
-    android:paddingRight="50dp"
+    android:paddingRight="40dp"
     android:paddingTop="0dip" >
 
     <LinearLayout
@@ -33,14 +33,11 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginBottom="-10dp"
-        android:layout_marginTop="-10dp"
-        android:layout_weight="1"
-        android:paddingBottom="-10dp"
-        android:paddingTop="-10dp" >
+        android:layout_margin="2dp"
+        android:layout_weight="1" >
 
         <LinearLayout
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center_vertical"
@@ -51,7 +48,9 @@
                 android:id="@+id/balloon_item_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
+                android:layout_gravity="left"
+                android:layout_weight="1"
+                android:gravity="center_horizontal|left"
                 android:text="balloon_item_title"
                 android:textColor="@android:color/primary_text_light"
                 android:textSize="16sp" />
@@ -71,7 +70,7 @@
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:layout_gravity="center_vertical"
-            android:layout_marginRight="0dp"
+            android:layout_marginLeft="5dp"
             android:src="@drawable/arrow_right" />
     </LinearLayout>
 
