--- a/BioadresarAndroid/res/layout/main_menu.xml
+++ b/BioadresarAndroid/res/layout/main_menu.xml
@@ -17,44 +17,55 @@
     along with BioAdresar.  If not, see <http://www.gnu.org/licenses/>.
 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:layout_gravity="center"
-    android:layout_marginBottom="10dp"
-    android:layout_marginLeft="10dp"
-    android:layout_marginRight="10dp"
-    android:layout_marginTop="10dp"
+    android:background="@drawable/background"
     android:gravity="center_vertical|center_horizontal"
     android:orientation="vertical" >
 
-    <ImageView
-        android:id="@+id/mapLink"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="0dp"
-        android:layout_weight="0.3"
-        android:adjustViewBounds="true"
-        android:padding="0dp"
-        android:src="@drawable/map" />
+        android:layout_gravity="center"
+        android:layout_margin="10dp"
+        android:orientation="vertical" >
 
-    <ImageView
-        android:id="@+id/listLink"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="0dp"
-        android:layout_weight="0.3"
-        android:adjustViewBounds="true"
-        android:padding="0dp"
-        android:src="@drawable/list" />
+        <ImageView
+            android:id="@+id/mapLink"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="0dp"
+            android:layout_weight="0.1"
+            android:adjustViewBounds="true"
+            android:padding="0dp"
+            android:scaleType="centerInside"
+            android:src="@drawable/map" />
 
-    <ImageView
-        android:id="@+id/bookmarkListLink"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="0dp"
-        android:layout_weight="0.3"
-        android:adjustViewBounds="true"
-        android:padding="0dp"
-        android:src="@drawable/bookmarks" />
+        <ImageView
+            android:id="@+id/listLink"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="0dp"
+            android:layout_weight="0.1"
+            android:adjustViewBounds="true"
+            android:padding="0dp"
+            android:scaleType="centerInside"
+            android:src="@drawable/list" />
+
+        <ImageView
+            android:id="@+id/bookmarkListLink"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="0dp"
+            android:layout_weight="0.1"
+            android:adjustViewBounds="true"
+            android:padding="0dp"
+            android:scaleType="centerInside"
+            android:src="@drawable/bookmarks" />
+    </LinearLayout>
 
 </LinearLayout>
